Fixing bug on smaller screens - overflowing elements in section

--- a/src/style/_portfolio.scss
+++ b/src/style/_portfolio.scss
@@ -6,9 +6,10 @@ $image-mask: rgba(0, 0, 0, 0.3);
 $navbar-height: 80px;
 
 .portfolio {
-  height: calc(100vh - #{$navbar-height}); //80px - height of the navbar
+  min-height: calc(100vh - #{$navbar-height}); //80px - height of the navbar
   display: flex;
   flex-direction: column;
+  justify-content: stretch;
   align-items: center;
   scroll-snap-align: start;
 
@@ -62,9 +63,10 @@ $navbar-height: 80px;
   }
 
   &-wrapper {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: stretch;
     align-items: center;
     padding: 0 20px;
     width: 100%;
@@ -72,10 +74,12 @@ $navbar-height: 80px;
 
     @include desktop {
       flex-direction: row;
+      align-items: stretch;
     }
   }
 
   &-card {
+    flex-grow: 1;
     background-color: $grey;
     background-image: linear-gradient($image-mask, $image-mask),
       url(../img/building6.jpg);
@@ -87,17 +91,14 @@ $navbar-height: 80px;
     justify-content: center;
     align-items: center;
     padding: 30px;
-    height: 100%;
     width: 100%;
+    height: 100%;
     margin-bottom: 10px;
 
-    @include tablet {
-      // max-width: 80%;
-    }
-
     @include desktop {
+      //   flex-grow: 1;
       margin: 0 10px;
-      height: 100%;
+      height: auto;
       justify-content: flex-start;
     }
 
